Building the map

--- a/content/notes/failing-forward/index.mdx
+++ b/content/notes/failing-forward/index.mdx
@@ -18,17 +18,17 @@ Over past four years, my team and I built a design system for a product with ove
 
 The product was capable. Really capable. But you wouldn't know it by looking at it. The UI felt dated. If you judged the product by its interface, as most people do, you would severely underestimate what it could do.
 
-This wasn't a failure of effort. Teams were working hard. But they were spending most of their energy extinguishing fires caused by decisions made years earlier. Technical debt had compounded to the point where even small UI changes felt risky. "We can't build that" became a reflex. Not because the developers lacked skill, but because the tooling and the codebase had made ambition expensive. Designers kept pushing forward. The codebase kept holding everyone back.
+This wasn't a failure of effort. Teams were working hard. But they were spending most of their energy extinguishing fires caused by decisions made years earlier. Technical debt had compounded to the point where even small UI changes felt risky. "We can't build that" became a reflex. Not because the developers lacked skill, but because the tooling and the codebase had made ambition expensive. It was holding everyone back.
 
-Something had to give. The plan was to split the monolithic software into multiple standalone products. The hope was that this would bring both technical and organizational benefits. Smaller codebases, independent teams, modern stacks. A design system seemed like the natural foundation for this new world. Shared components, shared language, shared quality.
+Something had to give. We planned to split the monolithic software into multiple standalone products. The hope was that this would bring both technical and organizational benefits. Smaller codebases, independent teams, modern stacks. A design system seemed like the natural fit for this new world. Shared components, shared language, shared standards.
 
 ## Building the map
 
-So we put together a small team to build the foundation. We bootstrapped a component library with a modern tech stack. The design was based on a previous exploration that had already been approved but never made it into production. We could focus entirely on building.
+So we put together a small team to build a new foundation. We bootstrapped a component library with a modern tech stack. We paired it with an updated visual design that had long been approved but never shipped.
 
 Around the same time, one of the product teams was about to rebuild their product from the ground up. We jumped on the opportunity. A greenfield environment. No legacy constraints. No compromises. The perfect test case.
 
-And it worked. The pilot team delivered something we were genuinely proud of. Components that used to take days to build from scratch were now available out of the box. There were growing pains, but that was expected. We had proven that the approach could work. We high-fived each other and prepared to roll it out to the rest of the company.
+And it worked. The pilot team delivered something we were genuinely proud of. Components that used to take days to build from scratch were now available out of the box. There were growing pains, but that was expected. We had proven that the approach could work.
 
 ## Crickets
 
