--- a/content/notes/failing-forward/index.mdx
+++ b/content/notes/failing-forward/index.mdx
@@ -28,19 +28,21 @@ So we put together a small team to build a new foundation. We bootstrapped a com
 
 Around the same time, one of the product teams was about to rebuild their product from the ground up. We jumped on the opportunity. A greenfield environment. No legacy constraints. No compromises. The perfect test case.
 
-And it worked. The pilot team delivered something we were genuinely proud of. Components that used to take days to build from scratch were now available out of the box. There were growing pains, but that was expected. We had proven that the approach could work.
+And it worked. The pilot team delivered something we were genuinely proud of. Components that used to take days to build from scratch were now available out of the box. Of course there were growing pains, but we had proven that the approach could work.
 
 ## Crickets
 
 We had proven it could work. We had a real product to point at. But the rest of the company wasn't interested. The plan to split the monolith into standalone products never gained traction. The majority of the company was still fully invested in the legacy system, and there was no sign of that changing. We hadn't anticipated this. We had built for a future that the organization wasn't moving toward.
 
+!!! shiny new toy?
+
 When we showed up with our shiny new component library, our colleagues looked at their workload and said "I don't have time to learn this." They weren't being difficult. They were being rational. The cost of adopting something new felt impossibly high when you're already struggling to keep up.
 
 ## Meeting them where they were
 
-We had to rethink everything. Our entire approach assumed that teams would come to us once they saw what was possible. That assumption was wrong. If they couldn't come to us, we had to go to them.
+After a short existential crisis, we rethought our approach. We had assumed teams were just waiting for us to hand them something better. They weren't. So we went to them.
 
-We brought the design system into the legacy system. We matched the visual style so that anything built with the new components was indistinguishable from the old code. Under the hood, developers were working with modern tools.
+So we did something a bit counterintuitive: we disguised the new system as the old one. We brought the design system into the legacy codebase and matched the visual style so that anything built with new components was indistinguishable from the old code. Under the hood, developers were working with modern tools. On the surface, nothing had changed.
 
 Then we focused on making the transition as painless as possible for colleagues. We wrote guides. We gave training sessions. We improved their dev environments. Small things, but small things add up.
 
