--- a/content/notes/failing-forward/index.mdx
+++ b/content/notes/failing-forward/index.mdx
@@ -34,8 +34,6 @@ And it worked. The pilot team delivered something we were genuinely proud of. Co
 
 We had proven it could work. We had a real product to point at. But the rest of the company wasn't interested. The plan to split the monolith into standalone products never gained traction. The majority of the company was still fully invested in the legacy system, and there was no sign of that changing. We hadn't anticipated this. We had built for a future that the organization wasn't moving toward.
 
-!!! shiny new toy?
-
 When we showed up with our shiny new component library, our colleagues looked at their workload and said "I don't have time to learn this." They weren't being difficult. They were being rational. The cost of adopting something new felt impossibly high when you're already struggling to keep up.
 
 ## Meeting them where they were
@@ -44,21 +42,21 @@ After a short existential crisis, we rethought our approach. We had assumed team
 
 So we did something a bit counterintuitive: we disguised the new system as the old one. We brought the design system into the legacy codebase and matched the visual style so that anything built with new components was indistinguishable from the old code. Under the hood, developers were working with modern tools. On the surface, nothing had changed.
 
-Then we focused on making the transition as painless as possible for colleagues. We wrote guides. We gave training sessions. We improved their dev environments. Small things, but small things add up.
+Then we focused on making the transition as painless as possible for our colleagues. We wrote guides. We gave training sessions. We improved their dev environments. Teams working in the legacy codebase were still manually refreshing the browser after every UI change. Yes, really.
 
-Most importantly, we showed up. We sat with teams. We helped them through their first components, their first pages, their first bugs. We weren't a library they could install. We were a team they could call.
+But most importantly, we showed up. We sat with colleagues during their first steps with the design system. We were there for the first component, the first page, the first bug. We weren't a library they could install. We were a team they could call.
 
 ## The trap
 
-It worked. The narrative slowly shifted from "we can't build that" to "we can build that... most likely." One team after another started using the design system. It spread on its own. In product demos, more and more features were being built with our components. The numbers looked great.
+It worked. The narrative slowly shifted from "we can't build that" to "we can build that... most likely." One team after another started using the design system. It spread on its own. In product demos, more and more features were being built with our tools. The numbers looked great.
 
 So yay! We did it! ...right?
 
-Not quite. The adoption numbers looked great, but teams were still building inconsistent interfaces. Same buttons, same inputs, same building blocks. The pages they built with them looked nothing alike.
+Not quite. The adoption numbers looked great, but teams were still building inconsistent interfaces. Same buttons, same inputs, same building blocks. The pages looked consistent at a glance, but the way they worked and felt told a different story.
 
-Our colleagues knew how to use the components. They were productive. But knowing how to use a component is not the same as knowing how to combine them. The system itself had little opinion about how things should come together. Teams approached the same user flows differently. They all used the same components and arrived at results that were close, but never quite consistent.
+Our colleagues knew how to use the components. They were productive. But knowing how to use a component is not the same as knowing how to combine them. The system itself had little opinion about how things should come together. Teams approached the same user flows differently. They all used the same components and arrived at results that were close enough to look right, but different enough for users to notice.
 
-So we pivoted again. We overhauled the documentation. We shifted from describing what components can do to explaining how to combine them. We focused on patterns. Common use cases, recurring user flows, opinionated guidance about how the pieces fit together.
+So we pivoted again. We overhauled the documentation. Instead of describing what components can do, we explained how to combine them. Patterns for common use cases, opinionated guidance for recurring user flows. Less "here's a button" and more "here's how to load data and keep people in the loop."
 
 ## Failing forward
 
