--- a/content/notes/failing-forward/index.mdx
+++ b/content/notes/failing-forward/index.mdx
@@ -64,10 +64,10 @@ At the time, none of this felt like progress. It felt like we kept getting it wr
 
 It was trust.
 
-None of this was planned. We did not sit down at the start and map out every turn. Each change in direction happened because we got stuck. And each time we got stuck, we were forced closer to the people using our system. That is where trust came from. Not from a rollout plan, but from showing up, listening, and adjusting.
+None of this was planned. We did not sit down at the start and map out every turn. Each change in direction happened because we got stuck. And each time we got stuck, we got closer to the people using our system. That is where trust came from. Not from a rollout plan, but from showing up, listening, and adjusting.
 
-There is a reason we kept getting stuck: we were confusing the map for the territory. Your documentation, your Figma library, your component playground: that is the map. Organized, sensible, controlled. The territory is the reality. Messy CSS overrides in a codebase that has grown for over twenty years. Tight deadlines that force teams to take shortcuts. Habits your colleagues have built up over a decade of doing things a certain way. If we hadn't been ignored by the teams working on the legacy system, we would never have invested so heavily in developer experience and support. If adoption hadn't produced inconsistent interfaces, we would never have discovered how much patterns matter.
+The reason we kept running into walls: we were confusing the map for the territory. Our documentation, our component library: that was the map. Organized, sensible, controlled. The territory is the reality. Messy CSS overrides in a codebase that has grown for over twenty years. Tight deadlines that force teams to take shortcuts. Habits your colleagues have built up over a decade of doing things a certain way. If we hadn't been ignored by the teams working on the legacy system, we would never have invested so heavily in developer experience and support. If adoption hadn't produced inconsistent interfaces, we would never have discovered how much teams needed us to be opinionated.
 
 The obstacles were never in the way. They were showing us the way.
 
-Building a design system is not a straight line from a Figma file to a component library to a dashboard full of adoption metrics. It is an ongoing conversation between what you think teams need and what they actually need. The only way to learn the difference is to get it wrong, listen, and adjust. We are still adjusting. The territory keeps changing.
+Building a design system is not a straight line from a Figma file to a component library to a dashboard full of adoption metrics. It is an ongoing conversation between what you think teams need and what they actually need. And sometimes, the only way to learn the difference is to get it wrong, listen, and adjust. We are still adjusting. The territory keeps changing.
