--- a/content/notes/failing-forward/index.mdx
+++ b/content/notes/failing-forward/index.mdx
@@ -6,7 +6,7 @@ image: [./1.webp, ./2.webp, ./3.webp]
 date: 2026-02-07
 ---
 
-The way we usually talk about design systems, you'd think they are just a collection of well-organized artifacts. Here's the Figma library. Here's the component repo. Here are the design tokens. Everything labeled, everything documented, everything in its place. It feels good to organize these things. It is clean, structured and manageable. It feels like your are in control.
+The way we usually talk about design systems, you'd think they are just a collection of well-organized artifacts. Here's the Figma library. Here's the component repo. Here are the design tokens. Everything labeled, everything documented, everything in its place. It feels good to organize these things. It is clean, structured and manageable. You feel in control.
 
 But it's an illusion.
 
@@ -28,13 +28,13 @@ So we put together a small team to build a new foundation. We bootstrapped a com
 
 Around the same time, one of the product teams was about to rebuild their product from the ground up. We jumped on the opportunity. A greenfield environment. No legacy constraints. No compromises. The perfect test case.
 
-And it worked. The pilot team delivered something we were genuinely proud of. Components that used to take days to build from scratch were now available out of the box. Of course there were growing pains, but we had proven that the approach could work.
+And it worked. The pilot team delivered something we were proud of. Components that used to take days to build from scratch were now available out of the box. Of course there were growing pains, but we had proven that the approach could work.
 
 ## Crickets
 
 We had proven it could work. We had a real product to point at. But the rest of the company wasn't interested. The plan to split the monolith into standalone products never gained traction. The majority of the company was still fully invested in the legacy system, and there was no sign of that changing. We hadn't anticipated this. We had built for a future that the organization wasn't moving toward.
 
-When we showed up with our shiny new component library, our colleagues looked at their workload and said "I don't have time to learn this." They weren't being difficult. They were being rational. The cost of adopting something new felt impossibly high when you're already struggling to keep up.
+When we showed up with our shiny new component library, our colleagues looked at their workload and said "I don't have time to learn this." They weren't being difficult. They were being rational. The cost of adopting something new felt too much when you're already struggling to keep up.
 
 ## Meeting them where they were
 
@@ -60,7 +60,7 @@ So we pivoted again. We overhauled the documentation. Instead of describing what
 
 ## Failing forward
 
-At the time, none of this felt like progress. It felt like we kept getting it wrong. But every pivot, every adjustment, forced us closer to the most valuable thing we would build. Turns out, it wans't the component library, the documentation, or the patterns.
+At the time, none of this felt like progress. It felt like we kept getting it wrong. But every pivot, every adjustment, forced us closer to the most valuable thing we would build. Turns out, it wasn't the component library, the documentation, or the patterns.
 
 It was trust.
 
