--- a/content/notes/failing-forward/index.mdx
+++ b/content/notes/failing-forward/index.mdx
@@ -68,6 +68,6 @@ None of this was planned. We did not sit down at the start and map out every tur
 
 The reason we kept running into walls: we were confusing the map for the territory. Our documentation, our component library: that was the map. Organized, sensible, controlled. The territory is the reality. Messy CSS overrides in a codebase that has grown for over twenty years. Tight deadlines that force teams to take shortcuts. Habits your colleagues have built up over a decade of doing things a certain way. If we hadn't been ignored by the teams working on the legacy system, we would never have invested so heavily in developer experience and support. If adoption hadn't produced inconsistent interfaces, we would never have discovered how much teams needed us to be opinionated.
 
-The obstacles were never in the way. They were showing us the way.
+The obstacles were never in the way. They were the way.
 
 Building a design system is not a straight line from a Figma file to a component library to a dashboard full of adoption metrics. It is an ongoing conversation between what you think teams need and what they actually need. And sometimes, the only way to learn the difference is to get it wrong, listen, and adjust. We are still adjusting. The territory keeps changing.
