--- a/content/notes/2026-02-15-failing-forward-at-design-systems/index.mdx
+++ b/content/notes/2026-02-15-failing-forward-at-design-systems/index.mdx
@@ -6,13 +6,9 @@ image: [./1.webp, ./2.webp, ./3.webp]
 date: 2026-02-15
 ---
 
-The way we usually talk about design systems, you'd think they are just a collection of well-organized artifacts. Here's the Figma library. Here's the component repo. Here are the design tokens. Everything labeled, everything documented, everything in its place. It feels good to organize these things. It is clean, structured and manageable. You feel in control.
+When you set out to build a design system, your head is full of components, tokens, and documentation. That's what a design system is, right? It's tangible work. You can shape it exactly how you want, and it feels like real progress. Then you meet the reality of how your colleagues actually work, and you find out the hard part was never the building.
 
-But it's an illusion.
-
-A lot of building a design system has little to do with the artifacts. It is about navigating the messy, human reality of how teams actually build software.
-
-Over past four years, my team and I built a design system for a product with over 20 years of history and all the legacy baggage that comes with it. Most of the assumptions we started with turned out to be wrong, but each time one broke, it pushed us somewhere better.
+We learned that the hard way. My team spent four years building a design system for a product with over 20 years of history and all the legacy baggage that comes with it. Most of our assumptions turned out to be wrong, but each time one broke, it pushed us somewhere better.
 
 ## The territory we inherited
 
