--- a/content/notes/2026-02-15-failing-forward-at-design-systems/index.mdx
+++ b/content/notes/2026-02-15-failing-forward-at-design-systems/index.mdx
@@ -16,7 +16,7 @@ The product was capable. Really capable. But you wouldn't know it by looking at 
 
 This wasn't a failure of effort. Teams were working hard. But they were spending most of their energy extinguishing fires caused by decisions made years earlier. Technical debt had compounded to the point where even small UI changes felt risky. "We can't build that" became a reflex. Not because the developers lacked skill, but because the tooling and the codebase had made ambition expensive. It was holding everyone back.
 
-Something had to give. We planned to split the monolithic software into multiple standalone products. The hope was that this would bring both technical and organizational benefits. Smaller codebases, independent teams, modern stacks. A design system seemed like the natural fit for this new world. Shared components, shared language, shared standards.
+So the plan became to split the monolithic software into multiple standalone products. The hope was that this would bring both technical and organizational benefits. Smaller codebases, independent teams, modern stacks. A design system seemed like the natural fit for this new world. Shared components, shared language, shared standards.
 
 ## Building the map
 
