--- a/content/notes/2026-02-15-failing-forward-at-design-systems/index.mdx
+++ b/content/notes/2026-02-15-failing-forward-at-design-systems/index.mdx
@@ -24,13 +24,13 @@ So we put together a small team to build a new foundation. We bootstrapped a com
 
 Around the same time, one of the product teams was about to rebuild their product from the ground up. We jumped on the opportunity. A greenfield environment. No legacy constraints. No compromises. The perfect test case.
 
-And it worked. The pilot team delivered something we were proud of. Components that used to take days to build from scratch were now available out of the box. Of course there were growing pains, but we had proven that the approach could work.
+It actually worked. The pilot team delivered something we were proud of. Components that used to take days to build from scratch were now available out of the box. Of course there were growing pains, but the proof was there.
 
 ## Crickets
 
-We had proven it could work. We had a real product to point at. But the rest of the company wasn't interested. The plan to split the monolith into standalone products never gained traction. The majority of the company was still fully invested in the legacy system, and there was no sign of that changing. We hadn't anticipated this. We had built for a future that the organization wasn't moving toward.
+We had a real product to point at. Turns out, nobody was looking. The rest of the company was still fully invested in the legacy system, and the plan to split the monolith into standalone products never gained traction. We had built for a future that the organization wasn't moving toward.
 
-When we showed up with our shiny new component library, our colleagues looked at their workload and said "I don't have time to learn this." They weren't being difficult. They were being rational. The cost of adopting something new felt too much when you're already struggling to keep up.
+When we showed up with our shiny new tools, our colleagues looked at their workload and said "I don't have time to learn this." That caught us off guard. They weren't being difficult. They were being rational. The cost of adopting something new felt too much when you're already struggling to keep up.
 
 ## Meeting them where they were
 
