--- a/content/notes/2026-02-15-failing-forward-at-design-systems/index.mdx
+++ b/content/notes/2026-02-15-failing-forward-at-design-systems/index.mdx
@@ -44,7 +44,7 @@ But most importantly, we showed up. We sat with colleagues during their first st
 
 ## The trap
 
-It worked. The narrative slowly shifted from "we can't build that" to "we can build that... most likely." One team after another started using the design system. It spread on its own. In product demos, more and more features were being built with our tools. The numbers looked great.
+Slowly, it started working. The narrative shifted from "we can't build that" to "we can build that... most likely." One team after another started using the design system without us having to ask. In product demos, more and more features were being built with our tools. The numbers looked great.
 
 So yay! We did it! ...right?
 
