--- a/content/notes/2026-02-15-failing-forward-at-design-systems/index.mdx
+++ b/content/notes/2026-02-15-failing-forward-at-design-systems/index.mdx
@@ -56,11 +56,9 @@ So we pivoted again. We overhauled the documentation. Instead of describing what
 
 ## Failing forward
 
-At the time, none of this felt like progress. It felt like we kept getting it wrong. But every pivot, every adjustment, forced us closer to the most valuable thing we would build. Turns out, it wasn't the component library, the documentation, or the patterns.
+At the time, none of this felt like progress. It felt like we kept getting it wrong. But every pivot, every adjustment, forced us closer to something we hadn't planned for. It just took us a while to see it.
 
-It was trust.
-
-None of this was planned. We did not sit down at the start and map out every turn. Each change in direction happened because we got stuck. And each time we got stuck, we got closer to the people using our system. That is where trust came from. Not from a rollout plan, but from showing up, listening, and adjusting.
+We did not sit down at the start and map out every turn. Each change in direction happened because we got stuck. And each time we got stuck, we got closer to the people using our system. That is where trust came from. Not from a rollout plan, but from showing up, listening, and adjusting.
 
 The reason we kept running into walls: we were confusing the map for the territory. Our documentation, our component library: that was the map. Organized, sensible, controlled. The territory is the reality. Messy CSS overrides in a codebase that has grown for over twenty years. Tight deadlines that force teams to take shortcuts. Habits your colleagues have built up over a decade of doing things a certain way. If we hadn't been ignored by the teams working on the legacy system, we would never have invested so heavily in developer experience and support. If adoption hadn't produced inconsistent interfaces, we would never have discovered how much teams needed us to be opinionated.
 
