--- a/content/notes/2026-02-15-failing-forward-at-design-systems/index.mdx
+++ b/content/notes/2026-02-15-failing-forward-at-design-systems/index.mdx
@@ -36,7 +36,7 @@ When we showed up with our shiny new tools, our colleagues looked at their workl
 
 After a short existential crisis, we rethought our approach. We had assumed teams were just waiting for us to hand them something better. They weren't. So we went to them.
 
-So we did something a bit counterintuitive: we disguised the new system as the old one. We brought the design system into the legacy codebase and matched the visual style so that anything built with new components was indistinguishable from the old code. Under the hood, developers were working with modern tools. On the surface, nothing had changed.
+We did something a bit counterintuitive: we disguised the new system as the old one. We brought the design system into the legacy codebase and matched the visual style so that anything built with new components was indistinguishable from the old code. Under the hood, developers were working with modern tools. On the surface, nothing had changed.
 
 Then we focused on making the transition as painless as possible for our colleagues. We wrote guides. We gave training sessions. We improved their dev environments. Teams working in the legacy codebase were still manually refreshing the browser after every UI change. Yes, really.
 
@@ -58,8 +58,10 @@ So we pivoted again. We overhauled the documentation. Instead of describing what
 
 At the time, none of this felt like progress. It felt like we kept getting it wrong. But every pivot, every adjustment, forced us closer to something we hadn't planned for. It just took us a while to see it.
 
-We did not sit down at the start and map out every turn. Each change in direction happened because we got stuck. And each time we got stuck, we got closer to the people using our system. That is where trust came from. Not from a rollout plan, but from showing up, listening, and adjusting.
+We didn't sit down at the start and map out every turn. Each change in direction happened because we got stuck. And each time we got stuck, we got closer to the people using our system. That is where trust came from. Not from a rollout plan, but from showing up, listening, and adjusting.
 
-The reason we kept running into walls: we were confusing the map for the territory. Our documentation, our component library: that was the map. Organized, sensible, controlled. The territory is the reality. Messy CSS overrides in a codebase that has grown for over twenty years. Tight deadlines that force teams to take shortcuts. Habits your colleagues have built up over a decade of doing things a certain way. If we hadn't been ignored by the teams working on the legacy system, we would never have invested so heavily in developer experience and support. If adoption hadn't produced inconsistent interfaces, we would never have discovered how much teams needed us to be opinionated.
+The reason we kept running into walls: we were confusing the map for the territory. Our documentation, our component library: that was the map. Organized, sensible, controlled.
+
+The territory is the reality. Messy CSS overrides in a codebase that has grown for over twenty years. Tight deadlines that force teams to take shortcuts. Habits your colleagues have built up over a decade of doing things a certain way. If we hadn't been ignored by the teams working on the legacy system, we would never have invested so heavily in developer experience and support. If adoption hadn't produced inconsistent interfaces, we would never have discovered how much teams needed us to be opinionated.
 
 Building a design system is not a straight line from a Figma file to a component library to a dashboard full of adoption metrics. It's an ongoing conversation. You think you know what teams need, and then they show you what they actually need. Sometimes the only way to learn the difference is to get it wrong, listen, and adjust. We are still adjusting. The territory keeps changing.
