--- a/content/notes/2026-02-15-failing-forward-at-design-systems/index.mdx
+++ b/content/notes/2026-02-15-failing-forward-at-design-systems/index.mdx
@@ -20,7 +20,7 @@ So the plan became to split the monolithic software into multiple standalone pro
 
 ## Building the map
 
-So we put together a small team to build a new foundation. We bootstrapped a component library with a modern tech stack. We paired it with an updated visual design that had long been approved but never shipped.
+This was our chance to start fresh. We put together a small team, bootstrapped a component library with a modern tech stack, and paired it with an updated visual design that had long been approved but never shipped.
 
 Around the same time, one of the product teams was about to rebuild their product from the ground up. We jumped on the opportunity. A greenfield environment. No legacy constraints. No compromises. The perfect test case.
 
