--- a/content/notes/2026-02-15-failing-forward-at-design-systems/index.mdx
+++ b/content/notes/2026-02-15-failing-forward-at-design-systems/index.mdx
@@ -56,12 +56,8 @@ So we pivoted again. We overhauled the documentation. Instead of describing what
 
 ## Failing forward
 
-At the time, none of this felt like progress. It felt like we kept getting it wrong. But every pivot, every adjustment, forced us closer to something we hadn't planned for. It just took us a while to see it.
+For most of the journey, it felt like we kept getting it wrong. But looking back, the pattern is clear: we kept confusing the map for the territory.
 
-We didn't sit down at the start and map out every turn. Each change in direction happened because we got stuck. And each time we got stuck, we got closer to the people using our system. That is where trust came from. Not from a rollout plan, but from showing up, listening, and adjusting.
+Our documentation, our component library, our adoption metrics: that was the map. Organized, sensible, controlled. The territory is what we kept crashing into. Messy CSS overrides in a codebase that has grown for over twenty years. Tight deadlines that force teams to take shortcuts. Habits your colleagues have built up over a decade of doing things a certain way.
 
-The reason we kept running into walls: we were confusing the map for the territory. Our documentation, our component library: that was the map. Organized, sensible, controlled.
-
-The territory is the reality. Messy CSS overrides in a codebase that has grown for over twenty years. Tight deadlines that force teams to take shortcuts. Habits your colleagues have built up over a decade of doing things a certain way. If we hadn't been ignored by the teams working on the legacy system, we would never have invested so heavily in developer experience and support. If adoption hadn't produced inconsistent interfaces, we would never have discovered how much teams needed us to be opinionated.
-
-Building a design system is not a straight line from a Figma file to a component library to a dashboard full of adoption metrics. It's an ongoing conversation. You think you know what teams need, and then they show you what they actually need. Sometimes the only way to learn the difference is to get it wrong, listen, and adjust. We are still adjusting. The territory keeps changing.
+Every time we treated the map as truth, the territory corrected us. Being ignored pushed us to invest in developer experience and support. Inconsistent interfaces showed us how much teams needed clear recommendations. Each failure forced us closer to the people using our system, and that is where the design system actually took shape. Not in the Figma file or the component library. In the territory. We are still adjusting. The territory keeps changing.
