--- a/content/notes/2026-02-15-failing-forward-at-design-systems/index.mdx
+++ b/content/notes/2026-02-15-failing-forward-at-design-systems/index.mdx
@@ -60,4 +60,6 @@ For most of the journey, it felt like we kept getting it wrong. But looking back
 
 Our documentation, our component library, our adoption metrics: that was the map. Organized, sensible, controlled. The territory is what we kept crashing into. Messy CSS overrides in a codebase that has grown for over twenty years. Tight deadlines that force teams to take shortcuts. Habits your colleagues have built up over a decade of doing things a certain way.
 
-Every time we treated the map as truth, the territory corrected us. Being ignored pushed us to invest in developer experience and support. Inconsistent interfaces showed us how much teams needed clear recommendations. Each failure forced us closer to the people using our system, and that is where the design system actually took shape. Not in the Figma file or the component library. In the territory. We are still adjusting. The territory keeps changing.
+Every time we treated the map as truth, the territory corrected us. Being ignored pushed us to invest in developer experience and support. Inconsistent interfaces showed us how much teams needed clear recommendations.
+
+Each obstacle forced us closer to the people using our system, and that is where the design system actually took shape. We are still failing forward. The territory keeps changing. But we've stopped treating the obstacles as setbacks. The resistance, the inconsistencies, the workarounds: they point us where to go next.
