--- a/content/notes/2026-02-15-failing-forward-at-design-systems/index.mdx
+++ b/content/notes/2026-02-15-failing-forward-at-design-systems/index.mdx
@@ -2,7 +2,7 @@
 title: Failing Forward at Design Systems
 description: Building a design system is not as straightforward as it seems. The obstacles along the way are chances to build something truly valuable.
 topics: [design-systems]
-image: [./1.webp, ./2.webp, ./3.webp]
+image: [./1.avif, ./2.avif, ./3.avif]
 date: 2026-02-15
 ---
 
