use description on home page and clean up

--- a/content/notes/2026-02-16-failing-forward-at-design-systems/index.mdx
+++ b/content/notes/2026-02-16-failing-forward-at-design-systems/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Failing Forward at Design Systems
-description: Building a design system is not as straightforward as it seems. The obstacles along the way are chances to build something truly valuable.
+description: The hardest part of building a design system was never the components, the tokens, or the docs. We built for a future nobody was moving toward, then learned to meet people where they were.
 topics: [design-systems]
 image: [./1.avif, ./2.avif, ./3.avif]
 date: 2026-02-16
