--- a/content/notes/2026-02-16-failing-forward-at-design-systems/index.mdx
+++ b/content/notes/2026-02-16-failing-forward-at-design-systems/index.mdx
@@ -62,4 +62,10 @@ Our documentation, our component library, our adoption metrics: that was the map
 
 Every time we treated the map as truth, the territory corrected us. Not gently, but clearly. Being ignored pushed us to invest in developer experience and support. Inconsistent interfaces showed us how much teams needed clear recommendations.
 
-Each obstacle forced us closer to the people using our system, and that is where the design system actually took shape. We are still failing forward. The territory keeps changing. But we've stopped treating the obstacles as setbacks. The resistance, the inconsistencies, the workarounds: they point us where to go next.
+Each obstacle forced us closer to the people using our system, and that is where the design system actually took shape. We are still failing forward. The territory keeps changing, but we've stopped treating the obstacles as setbacks, because what carried us wasn't the plan, it was the willingness to drop it and adapt. The resistance, the inconsistencies, the workarounds: they point us where to go next.
+
+<Callout variant="info" title="This started as a talk">
+  I gave this talk in December 2024. If you prefer slides (or Friends
+  references), check out the [original
+  presentation](https://sebald.github.io/failing-forward-at-design-systems/).
+</Callout>
