--- a/content/misc/privacy.mdx
+++ b/content/misc/privacy.mdx
@@ -2,7 +2,11 @@
 title: Datenschutzerklärung
 ---
 
-_Note: The following privacy policy is provided in German to ensure strict compliance with the GDPR (DSGVO) and local requirements. If you have specific questions about your data, feel free to contact me in English._
+<Callout title="Note">
+  The following privacy policy is provided in German to ensure strict compliance
+  with the GDPR (DSGVO) and local requirements. If you have specific questions
+  about your data, feel free to contact me in English.
+</Callout>
 
 In dieser Datenschutzerklärung informieren wir Sie über die Verarbeitung personenbezogener Daten bei der Nutzung dieser Website.
 
@@ -76,7 +80,7 @@ Die Verarbeitung der Daten erfolgt auf Grundlage von Art. 6 Abs. 1 lit. a) DSGVO
 
 Sie können Ihre Einwilligung jederzeit mit Wirkung für die Zukunft widerrufen. Nutzen Sie hierfür bitte den Link **„Cookie-Einstellungen“** im Footer dieser Website oder ändern Sie Ihre Auswahl direkt hier:
 
-<ConsentUpdate locale="de" triggerVariant="link" />
+<ConsentUpdate locale="de" triggerVariant="secondary" />
 
 Alternativ können Sie die Cookies in Ihrem verwendeten Browser löschen. Ein Opt-out ist zudem mit folgendem Browser-Add-on möglich: https://tools.google.com/dlpage/gaoptout/
 
