--- a/content/notes/2026-02-17-tailwind-at-scale/index.mdx
+++ b/content/notes/2026-02-17-tailwind-at-scale/index.mdx
@@ -15,7 +15,7 @@ But you don't have to leave Tailwind's system to solve this. With Tailwind 4, yo
 
 ## A quick recap
 
-If you're already deep in Tailwind 4, feel free to skip ahead. But for the sake of having a shared vocabulary, let's quickly cover the two building blocks.
+If you're already familiar with Tailwind 4, feel free to skip ahead. But for the sake of having a shared vocabulary, let's quickly cover the two building blocks.
 
 ### @utility
 
